<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<group android:checkableBehavior="single">-->
    <group android:id="@+id/g1">
        <item
            android:id="@+id/preference"
            android:checked="false"
            android:checkable="true"
            android:icon="@drawable/preferences_icon"
            android:title="@string/preference" />
    </group>
    <group android:id="@+id/g2">
        <item
            android:id="@+id/settings"
            android:checked="false"
            android:checkable="true"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings" />
    </group>
    <group android:id="@+id/g3">
        <item
            android:id="@+id/about"
            android:checked="false"
            android:checkable="true"
            android:icon="@drawable/about_icon"
            android:title="@string/about" />
    </group>
    <group android:id="@+id/g4">
        <item android:id="@+id/menu_logout"
            android:checked="false"
            android:checkable="true"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>


    <!--</group>-->
</menu>