<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_card_people"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/picture_person"
                tools:src="@drawable/girl2" />
            <TextView
                android:id="@+id/txt_people_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="23dp"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                tools:text="Barbara"
                />

            <TextView
                android:id="@+id/txt_picture_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_gravity="bottom"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:drawableLeft="@drawable/camera_icon_10x10_white"
                android:drawableStart="@drawable/camera_icon_10x10_white"
                android:drawablePadding="5dp"
                tools:text="4"/>
        </FrameLayout>

        <Button
            android:id="@+id/button_chat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/people_card_button_height"
            android:background="@drawable/button_chat_states"
            android:textColor="@android:color/white"
            android:text="@string/chat"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/linear_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|center_horizontal"
            style="?android:attr/buttonBarStyle"
            android:visibility="visible">
            <ImageButton
                android:id="@+id/btn_card_negative"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:src="@drawable/x_20x20_icon"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:layout_gravity="center_vertical"/>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@color/cardPeopleDivider" />

            <TextView
                android:id="@+id/txt_kissed_state"
                android:layout_width="0dp"
                android:layout_height="@dimen/people_card_button_height"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:text="@string/kissed"
                android:visibility="gone"/>

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="@dimen/people_card_button_height"
                android:id="@+id/btn_card_positive"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:src="@drawable/product_icon_20x20"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:visibility="visible"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>